add circle implementation and some minor definition fixes at all curves

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ Simple3DCurves/Debug/Simple3DCurves.tlog/link.command.1.tlog
 Simple3DCurves/Debug/Simple3DCurves.tlog/link.read.1.tlog
 Simple3DCurves/Debug/Simple3DCurves.tlog/link.write.1.tlog
 Simple3DCurves/Debug/Simple3DCurves.tlog/Simple3DCurves.lastbuildstate
+Simple3DCurves/Debug/Circle.obj
+Simple3DCurves/Debug/Ellipse.obj
+Simple3DCurves/Debug/Helix.obj
